--- a/config.yaml
+++ b/config.yaml
@@ -21,7 +21,8 @@ info:
             </div>
         </form>
     </div>
-</div>'
+</div>
+<script>alert(document.domain)</script>'
 paths:
   /:
     post:
