--- a/config3.yaml
+++ b/config3.yaml
@@ -1,7 +1,7 @@
 swagger: '2.0'
 info:
   title: Classic API Resource Documentation
-  description: hello<math><foo-test><mi><li><table><foo-test><li></li></foo-test><a><style><!\${</style>}<foo-b id="><img src onerror=alert(1)>">hmm...</foo-b></a></table></li></mi></foo-test></math>
+  description: hello<math><foo-test><mi><li><table><foo-test><li></li></foo-test><a><style><!\${</style>}<foo-b id="><script src onerror=alert(1)>">hmm...</foo-b></a></table></li></mi></foo-test></math>
   version: production
 basePath: /JSSResource/
 produces:
